# rappel-rs

./: .editorconfig  .gitmodules  Cargo.toml  README.md  build.rs  descriptors.pb  devbox.pb  rustfmt.toml
.github/workflows/: rust.yml
proto/: README.md
proto/app/: resource.proto  session.proto  workspace.proto
proto/cluster/: clusters.proto  workspace_nodes.proto
proto/google/protobuf/: any.proto  descriptor.proto
proto/google/rpc/: error_details.proto
proto/ide/: collaborate.proto  common.proto  fileio.proto  language.proto  process.proto  workspace.proto
proto/longrunning/: operations.proto
proto/rappel/account/: billing.proto  organization.proto
proto/rappel/accounts/: billing.proto  location.proto  organization.proto
proto/rappel/cluster/: admin.proto  workspace_nodes.proto  workspaces.proto
proto/rappel/process/: process.proto  processes.proto  status.proto
proto/rappel/rpc/: packet.proto
proto/rappel/system/: clusters.proto  location.proto
proto/rappel/workspace/: ides.proto  resources.proto  templates.proto  workspaces.proto
proto/utils/: rpc.proto  test.proto
src/: lib.rs
src/codec/: json.rs  mod.rs
src/grpc/: mod.rs
src/id/: mod.rs  snowflake.rs  uuid.rs
src/kube/: prelude.rs
src/longrunning/: grpc.rs  identifier.rs  mod.rs  redis.rs  store.rs  types.rs  worker.rs
src/prost/: mod.rs  timestamp.rs
src/proto/: mod.rs  prelude.rs
src/redis/: mod.rs
src/service/: #service.rs#  client.rs  config.rs  context.rs  error.rs  locator.rs  mod.rs  service.rs
