[package]
name = "rappel"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["longrunning", "redis"]
proto = []
redis = []
longrunning = ["proto"]

[dependencies]
bytes = "1"
async-trait = "0.1"
futures = "0.3"
thiserror = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"]}
serde_derive = "1"
serde_json = "1"

config = "0.13"

tokio = { version = "1", features = ["full"] }

chrono = "0.4"

redis = { version = "0.21.5", features = ["tokio-comp", "r2d2", "connection-manager"] }
uuid = { version = "1", features = ["serde", "v4"] }

# Service Deps
prost = "0.10"
prost-derive = "0.10"
prost-types = "0.10"
tonic = { version = "0.7", features = ["default", "tls"] }
tonic-health = "0.6"

# Observability
tracing = "0.1"
tracing-attributes = "0.1"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = {version = "0.3", features = ["json"]}
smallvec = "1"

[build-dependencies]
tonic-build = "0.7"
