[package]
name = "rappel"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["longrunning", "redis"]
proto = []
redis = []
longrunning = ["proto"]

[dependencies]
anyhow = "1.0.58"
bytes = "1.1.0"
chrono = "0.4.19"
thiserror = "1.0.31"

async-trait = "0.1.56"
futures = "0.3.21"
tokio = { version = "1.19.2", features = ["full"] }

serde = { version = "1.0.137", features = ["derive"] }
serde_derive = "1.0.137"
serde_json = "1.0.82"

config = "0.13.1"
redis = { version = "0.21.5", features = ["tokio-comp", "r2d2", "connection-manager"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }

# Service Deps
prost = "0.10.4"
prost-derive = "0.10.1"
prost-types = "0.10.1"
tonic = { version = "0.7.2", features = ["default", "tls"] }
tonic-health = "0.6.0"

# Observability
tracing = "0.1.35"
tracing-attributes = "0.1.22"
tracing-futures = "0.2.5"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.14", features = ["json"] }

[build-dependencies]
tonic-build = "0.7.2"
